Fetch data when click button | style list

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 
 <body>
     <h4>Homework Week 5</h4>
-    <a class="waves-effect waves-light btn">click here</a>
-    <ul id="list">
-    <!--data-->
-    </ul>
+    <div class="content">
+        <a class="waves-effect waves-light btn">click here</a>
+        <ul id="list">
+            <!--json data here-->
+        </ul>
+    </div>
+
+    <!-- Script -->
     <script src="scripts/callbacks.js"></script>
 </body>
 
